# vpn-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vpn_mcp/: client.py  config.py  fingerprint.py  proxy.py  server.py
